--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,3 +20,290 @@ a {
 * {
   box-sizing: border-box;
 }
+
+
+
+.footerSection {
+  background: #1B1F07;
+}
+.pageSection {
+  padding: 97px 0px 90px 0px;
+}
+.container {
+  width: 100%;
+  max-width: 1230px;
+  margin: 0 auto;
+ 
+  /* padding: 0px 15px; */
+}
+.footerListBoxWrapper {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+.footerListBox {
+  margin: 0px 15px;
+}
+.footerListHolder {
+  margin-bottom: 35px;
+}
+.footerListHead {
+  font-size: 18px;
+  line-height: 21px;
+  color: #c0a664;
+  margin: 0px 0px 20px 0px;
+}
+.footerList {
+  padding: 0px;
+  margin: 0px;
+  list-style-type: none;
+}
+.linkWhite {
+  font-size: 12px;
+  line-height: 16px;
+  color: #ffffff;
+  text-decoration: none;
+  position: relative;
+  overflow: hidden;
+}
+.linkWhite:hover {
+  /* content: "";
+    width: 100%;
+    height: 1px; */
+  color: #c0a664;
+  /* background: #ffffff; */
+  /* position: absolute;
+    left: 0px;
+    bottom: -2px;
+    transform: rotateY(90deg);
+    transition: 0.3s linear; */
+}
+.textRight {
+  text-align: right;
+}
+.footerRightList {
+  padding: 0px;
+  margin: 0px;
+  list-style-type: none;
+}
+.footerRightList__item {
+  font-size: 18px;
+  line-height: 24px;
+  text-align: right;
+  color: #a3a3a3;
+  text-decoration: none;
+  transition: all 0.3s linear;
+}
+.copyWriteBlock {
+  border-top: 1px solid #606060;
+  width: calc(100% - 30px);
+  margin: 0 auto;
+  padding-top: 24px;
+  margin-top: 40px;
+}
+.flexEB {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+.copyWriteText {
+  margin: 0px;
+  font-size: 12px;
+  line-height: 14px;
+  color: #ffffff;
+}
+.addressText {
+  text-align: right;
+  font-size: 12px;
+  line-height: 18px;
+  margin: 0px;
+  color: #ffffff;
+}
+.addressLink {
+  color: #ffffff;
+  text-decoration: none;
+}
+.footer-icon{
+  font-size: 40px !important;
+  margin: 10px;
+  color: #ffffff;
+}
+.footer-icon-container{
+  text-align: center;
+  display: flex;
+}
+
+@media only screen and (max-width: 767px) {
+  .container {
+    width: 100% !important;
+  }
+  .footerListBox.textRight {
+    text-align: center;
+    margin: 20px 0px;
+    justify-content: center;
+  }
+  .footerListHolder {
+    padding: 15px;
+  }
+  .footerListBox {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin: 0px;
+  }
+  .footerListBoxWrapper {
+    flex-direction: column;
+    width: calc(100% );
+    /* margin: 0px -15px; */
+  }
+  .copyWriteBlock {
+    flex-direction: column;
+    justify-content: center !important;
+    align-items: center !important;
+    text-align: left;
+  }
+}
+
+
+/* products-banner */
+.products-banner{
+  background: url(../assets//images/products-banner.png);
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 50vh;
+  background-size: cover;
+}
+.products-banner-title{
+  font-weight: 400;
+  font-size: 100px;
+  font-family: "Philosopher";
+  color: #fff;
+  padding-top: 150px;
+ 
+}
+
+.card-img-top{
+  height: 400px;
+  object-fit: cover;
+}
+.my-product-card{
+  cursor: pointer;
+  transform: scale(1, 1);
+  transition: transform 0.5s ease;
+}
+.my-product-card:hover{
+  transform: scale(1.02,1.02)
+}
+.product-btn {
+  /* background-color: linear-gradient(to right, #EAEED5 , #3B776D) !important; */
+background: linear-gradient(to right,rgba(218, 227, 176, 0.5) 50%,#3B776D 50%);
+display: flex;
+justify-content: space-around;
+color: white;
+padding: 8px 20px;
+width: 100%;
+margin-bottom: 34px;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+}
+.qty-btn{
+  color: black;
+  /* height: 40px; */
+}
+.qty-input {
+width: 31px;
+height: 21px;
+}
+.price-tag{
+  display: flex;
+  justify-content: space-between;
+}
+
+.in-stock {
+width: 89px;
+height: 34px;
+border: 1px solid #7a923e;
+border-radius: 5px;
+display: flex;
+align-items: center;
+justify-content: center;
+font-size: 16px;
+font-weight: 400;
+}
+.out-of-stock{
+  width: 89px;
+height: 34px;
+border: 1px solid #AE544E;
+border-radius: 5px;
+display: flex;
+align-items: center;
+justify-content: center;
+font-size: 16px;
+font-weight: 400;
+}
+.product-btn-cart{
+  background: #0F4637;
+display: flex;
+justify-content: space-around;
+align-items: center;
+color: white;
+padding: 8px 20px;
+width: 100%;
+margin-bottom: 34px;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+font-size: 14px;
+font-weight: 400;
+}
+.product-btn-cart span,.add-to-cart{
+  cursor: pointer;
+}
+.product-btn-cart span{
+  font-weight: 900;
+  font-size: 16px;
+}
+
+
+/* search-products */
+
+.search-products{
+  width: 100%;
+  background: rgba(218, 227, 176, 0.5)
+
+}
+.search-field-title-container{
+  width: 80%;
+  margin: 0 auto;
+  padding-top: 50px;
+ 
+}
+.search-field-title-container p{
+  font-size: 24px;
+  font-weight: 400;
+}
+
+.search-input-holder{
+  background-color: #fff;
+  border-radius: 5px;
+  width: 100%;
+  height: 48px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 10px;
+
+}
+.search-input{
+  border: 0;
+  outline: none;
+  width: 100%;
+  height: 100%;
+}
+
+.navbar{
+  background: #1B1F07;
+}
+
+.go-to-cart-btn{
+  background: #7A923E !important;
+  padding: 10px 0px;
+}
