--- a/styles/globals.css
+++ b/styles/globals.css
@@ -307,3 +307,15 @@ font-weight: 400;
   background: #7A923E !important;
   padding: 10px 0px;
 }
+
+
+.delete-btn,.edit-btn{
+  cursor: pointer;
+}
+.delete-btn:hover,.edit-btn:hover{
+  color: black;
+}
+.admin-drawer{
+  background: black;
+  height: 100%;
+}
