admin side added

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -162,6 +162,11 @@ a {
     align-items: center !important;
     text-align: left;
   }
+  .motion-modal{
+    /* width: clamp(50%,700px 90%); */
+    /* height: min(60%,500px); */
+    width: 90% !important;
+  }  
 }
 
 
@@ -318,4 +323,98 @@ font-weight: 400;
 .admin-drawer{
   background: black;
   height: 100%;
+}
+
+/* backdrop */
+
+.save-btn{
+  border: 2px solid black;
+  padding: 3px 6px;
+  border-radius: 8px;
+  width: 200px;
+}
+
+.backdrop{
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: #ffffffe1;
+  background-attachment:fixed ;
+  background-size: cover;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.motion-modal{
+  /* width: clamp(50%,700px 90%); */
+  /* height: min(60%,500px); */
+  width: 50%;
+
+  margin: auto;
+  padding: 0 0rem;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  border: 2px solid black;
+  box-shadow: rgba(235, 232, 232, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+
+  /* chnage */
+  background: rgb(242, 242, 242);
+  color: black;
+}
+
+.header{
+  border-bottom: 2px solid black;
+  width: 100%;
+  min-height: 55px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bolder;
+  font-size: xx-large;
+}
+
+.content{
+  min-height: 250px;
+  height: auto;
+  width: 100%;
+  /* overflow: auto; */
+
+  display: flex;
+  flex-wrap: wrap;
+
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+
+}
+
+
+.close-btn{
+  border: 3px solid black;
+  padding: 3px 15px;
+  border-radius: 6px;
+}
+
+.close-btn:hover{
+  transform: scale(1.1);
+  transition: 200ms;
+}
+
+.box{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+  height: fit-content;
+  margin: 15px 35px;
 }
