--- a/styles/globals.css
+++ b/styles/globals.css
@@ -306,7 +306,8 @@ font-weight: 400;
 
 
 .navbar{
-  background: #1B1F07;
+  /* background: #1B1F07; */
+  background: #455010 !important;
   position: sticky;
 }
 
@@ -316,11 +317,28 @@ font-weight: 400;
   width: 100% !important; 
 }
 
+
 .go-to-cart-btn{
   background: #7A923E !important;
   padding: 10px 0px;
 }
 
+.shopping-cart{
+   background: #1B1F07;
+  color: rgb(207, 174, 96);
+  font-weight: 600;
+  text-align: center;
+}
+
+.shopping-cart-button{
+ background-color: rgb(207, 174, 96);
+ color: black;
+}
+
+.shopping-cart-button:hover{
+  background-color: #455010;
+  color:  white;
+}
 
 .delete-btn,.edit-btn{
   cursor: pointer;
