--- a/styles/OurPrograms.module.css
+++ b/styles/OurPrograms.module.css
@@ -54,7 +54,13 @@
     width: 37%;
 }
 
-.category_img_container,
+.category_img_container{
+    display: flex;
+    height: 500px;
+    position: relative;
+    justify-content: center;
+}
+
 .venues_img_container{
     width: 100%;
     display: flex;
@@ -63,11 +69,14 @@
     justify-content: center;
 }
 
-.category_img_container img,
 .venues_img_container img{
     width: 100%;
     height: 100%;
     border-radius: 11px 11px 0px 0px;
+}
+
+.category_img_container img{
+    
 }
 
 .category_img_container button,
@@ -151,8 +160,18 @@
         width: 60%;
         margin-bottom: 3rem;
     }
+
+    .venues_text_container_expanded{
+        font-size: 0.8rem;
+    }
 }
 
+
+@media (max-width: 750px){
+    .venue_heading{
+        margin-top: 5rem;
+    }
+}
 
  @media (max-width: 540px) {
     .category_main_container{
@@ -176,6 +195,9 @@
         margin-right: 1rem;
         margin-left: 1rem;
         width: 70%;
+    }
+    .venue_heading{
+        margin-top: 7rem;
     }
 }
 
@@ -205,5 +227,9 @@
         margin-right: 10%;
         margin-left: 10%;
         width: 80%;
+    }
+
+    .venues_text_container_expanded{
+        font-size: 0.6rem;
     }
 }
