--- a/styles/OurPrograms.module.css
+++ b/styles/OurPrograms.module.css
@@ -79,10 +79,25 @@
     
 }
 
+.venues_description{
+    margin: 2rem;
+}
+
 .category_img_container button,
 .venues_img_container button{
     position: absolute;
     top: 85%;
+    color: white;
+    font-size: 1.2rem;
+    padding: 0.5rem 2rem;
+    font-family: 'Philosopher';
+    background: #748231;
+    border-radius: 36px;
+}
+
+.programs_know_more{
+    /* position: absolute;
+    top: 100%; */
     color: white;
     font-size: 1.2rem;
     padding: 0.5rem 2rem;
